--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "express-jwt": "^6.0.0",
     "idtoken-verifier": "^2.1.0",
     "jsonwebtoken": "^8.5.1",
+    "multer": "^1.4.2",
     "node-sass": "5.0.0",
     "nuxt": "^2.15.3",
     "nuxt-socket-io": "^1.1.18",
