making sure default assets are tracked but not assets that would be added later by users

--- a/.gitignore
+++ b/.gitignore
@@ -91,3 +91,30 @@ sw.*
 
 data/*
 !data/.gitkeep
+
+static/gifs/*
+!static/gifs/bonus-hog-passenger.gif
+!static/gifs/cinemascope.png
+!static/gifs/dmr.gif
+!static/gifs/fabulous-hogs.gif
+!static/gifs/halfjaw-speech.gif
+!static/gifs/saxo-cosplay-j4ckpot234.gif
+!static/gifs/sword.gif
+!static/gifs/tbag.gif
+!static/gifs/wtfrench-omg.gif
+!static/gifs/yapyap.gif
+
+static/sounds/*
+!static/sounds/cello-theme-01.mp3
+!static/sounds/cello-theme-02.mp3
+!static/sounds/h2-follow-01.mp3
+!static/sounds/icyhot-cover-01.mp3
+!static/sounds/icyhot-cover-01-bis.mp3
+!static/sounds/icyhot-cover-02.mp3
+!static/sounds/icyhot-cover-03.mp3
+!static/sounds/icyhot-cover-04.mp3
+!static/sounds/icyhot-cover-05.mp3
+!static/sounds/icyhot-cover-06.mp3
+!static/sounds/icyhot-cover-07.mp3
+!static/sounds/jazzy-odst-01.mp3
+!static/sounds/kazoo-cover-01.mp3
