--- a/.env.dist
+++ b/.env.dist
@@ -1,20 +1,17 @@
 # Do not edit this if you run this locally
 BASE_URL=http://localhost:3000
 
-# Do not edit this if you don't know what that is
-NGROK_URL=
-
 # Change these
 LOGIN_EMAIL=<same as your twitch account>
 LOGIN_PWD=<something secure>
 
-# Check the README.MD to learn how to get these
-TWITCH_CLIENT_ID=
-TWITCH_CLIENT_SECRET=
-
 # https://discordapp.com/oauth2/authorize?client_id=YOURCLIENTID&scope=bot&permissions=8
 DISCORD_TOKEN=
 DISCORD_GUILD=
+
+# Check the README.MD to learn how to get these
+TWITCH_CLIENT_ID=
+TWITCH_CLIENT_SECRET=
 
 # Edit this with some nice random gibberish
 JWT_SECRET=<thisissecretyoushouldchangeit>
@@ -22,6 +19,11 @@ JWT_SECRET=<thisissecretyoushouldchangeit>
 # You can leave this unchanged if you're not sure about what it is
 TOKEN_DURATION=86400
 
+# Do not edit this if you don't know what that is
+NGROK_URL=
+
 # Do not edit these if you run this locally
 DATA_PATH=<provide the absolute path to the data folder
-DOCKER_ENV=false
+ASSETS_PATH=<provide the absolute path to the static folder>
+DOMAIN_NAME=<same as BASE_URL but without http(s)://>
+DOCKER_PORT=3000
