completed the README (Discord setup)

--- a/.env.dist
+++ b/.env.dist
@@ -2,8 +2,8 @@
 BASE_URL=http://localhost:3000
 
 # Change these
-LOGIN_EMAIL=<same as your twitch account>
-LOGIN_PWD=<something secure>
+LOGIN_EMAIL=< /!\ MUST BE THE SAME AS YOUR TWITCH ACCOUNT /!\>
+LOGIN_PWD=<something secure, does NOT have to be the same as your Twitch account>
 
 # https://discordapp.com/oauth2/authorize?client_id=YOURCLIENTID&scope=bot&permissions=8
 DISCORD_TOKEN=
