--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "idtoken-verifier": "^2.1.0",
     "jsonwebtoken": "^8.5.1",
     "multer": "^1.4.2",
-    "node-sass": "^6.0.0",
+    "node-sass": "5.0.0",
     "nuxt": "^2.15.3",
     "nuxt-socket-io": "^1.1.18",
     "proper-lockfile": "^4.1.2",
