oopsy in docker-compose.yml

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,12 +14,12 @@ services:
     labels:
       - "traefik.enable=true"
       - "traefik.http.routers.twitchoverlay.entrypoints=http"
-      - "traefik.http.routers.twitchoverlay.rule=Host(`${DATA_PATH}`)"
+      - "traefik.http.routers.twitchoverlay.rule=Host(`${DOMAIN_NAME}`)"
       - "traefik.http.middlewares.limit.buffering.maxRequestBodyBytes=20000000"
       - "traefik.http.middlewares.twitchoverlay-https-redirect.redirectscheme.scheme=https"
       - "traefik.http.routers.twitchoverlay.middlewares=twitchoverlay-https-redirect"
       - "traefik.http.routers.twitchoverlay-secure.entrypoints=https"
-      - "traefik.http.routers.twitchoverlay-secure.rule=Host(`${DATA_PATH}`)"
+      - "traefik.http.routers.twitchoverlay-secure.rule=Host(`${DOMAIN_NAME}`)"
       - "traefik.http.routers.twitchoverlay-secure.tls=true"
       - "traefik.http.routers.twitchoverlay-secure.tls.certresolver=http"
       - "traefik.http.services.twitchoverlay.loadbalancer.server.port=${DOCKER_PORT}"
