--- a/.env.dist
+++ b/.env.dist
@@ -1,6 +1,9 @@
 # Do not edit this if you run this locally
 BASE_URL=http://localhost:3000
 
+# Currently available languages: en
+LANG=en
+
 # Change these
 LOGIN_EMAIL=< /!\ MUST BE THE SAME AS YOUR TWITCH ACCOUNT /!\>
 LOGIN_PWD=<something secure, does NOT have to be the same as your Twitch account>
