--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "proper-lockfile": "^4.1.2",
     "sass-loader": "10.1.1",
     "tmi.js": "^1.8.3",
+    "vue-i18n": "^8.24.4",
     "xmlhttprequest": "^1.8.0"
   },
   "devDependencies": {
