update in .env.dist about ffrench language being available

--- a/.env.dist
+++ b/.env.dist
@@ -1,9 +1,6 @@
 # Do not edit this if you run this locally
 BASE_URL=http://localhost:3000
 
-# Currently available languages: en
-LANG=en
-
 # Change these
 LOGIN_EMAIL=< /!\ MUST BE THE SAME AS YOUR TWITCH ACCOUNT /!\>
 LOGIN_PWD=<something secure, does NOT have to be the same as your Twitch account>
@@ -30,3 +27,6 @@ DATA_PATH=<provide the absolute path to the data folder
 ASSETS_PATH=<provide the absolute path to the static folder>
 DOMAIN_NAME=<same as BASE_URL but without http(s)://>
 DOCKER_PORT=3000
+
+# Currently available languages: en, fr
+LANG=en
