Adding Finnish translations thanks to Okom!

--- a/.env.dist
+++ b/.env.dist
@@ -28,5 +28,5 @@ ASSETS_PATH=<provide the absolute path to the static folder>
 DOMAIN_NAME=<same as BASE_URL but without http(s)://>
 DOCKER_PORT=3000
 
-# Currently available languages: en, fr
+# Currently available languages: en, fr, fi
 LANG=en
